<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreenConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:keepScreenOn="true"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/resetPasswordEmailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_big_big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_big_big_margin"
        android:gravity="center_horizontal"
        android:text="¿Olvidaste la contraseña?"
        android:textSize="11sp"
        android:focusable="true"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginCardView" />

    <View
        android:id="@+id/topRoundView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginStart="-70dp"
        android:layout_marginEnd="-0dp"
        android:background="@drawable/arc"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_big_margin"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/titleSplash"
        app:layout_constraintBottom_toBottomOf="@id/topRoundView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/backImageButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:tint="@android:color/white"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <View
        android:id="@+id/view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/arc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_big_big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_big_big_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:layout_constraintBottom_toTopOf="@id/resetPasswordEmailTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordCustomEditText"
        app:layout_constraintVertical_chainStyle="packed">

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminate="true"
            android:theme="@style/ProgressBarStyleWhite"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginBottom="@dimen/big_margin"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </androidx.cardview.widget.CardView>

    <com.libizo.CustomEditText
        android:id="@+id/passwordCustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_big_big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_big_big_margin"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:text=""
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/loginCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameCustomEditText"
        app:libIZO_setBackgroundColor="@android:color/white"
        app:libIZO_setBorderColor="@android:color/darker_gray"
        app:libIZO_setBorderView="true"
        app:libIZO_setCornerRadius="@dimen/default_margin" />

    <com.libizo.CustomEditText
        android:id="@+id/usernameCustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_big_big_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_big_big_margin"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/username"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@id/passwordCustomEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topRoundView"
        app:layout_constraintVertical_chainStyle="packed"
        app:libIZO_setBackgroundColor="@android:color/white"
        app:libIZO_setBorderColor="@android:color/darker_gray"
        app:libIZO_setBorderView="true"
        app:libIZO_setCornerRadius="@dimen/default_margin" />

</androidx.constraintlayout.widget.ConstraintLayout>